Update tab.html (eighth commit)
[모바일 추가]
-sub-banner
-youtube
-magazine B

[문제점]
-스크립트에서 이중탭에 swiper 기능 넣을 시 뜨는 오류

0:400 Uncaught TypeError: Failed to execute 'getComputedStyle' on 'Window': parameter 1 is not of type 'Element'.
    at b (0:400:19)
    at se.mount (0:4181:19)
    at se.init (0:4188:30)
    at new se (0:3889:16)
    at Mtab.js:230:18
    at NodeList.forEach (<anonymous>)
    at Mtab.js:229:13

: swiper.js와 충돌하는 거 같음
=>MD'S CHOICE 에서만 swiper가 먹고 , NEW ARRIVAL, BEST ITEM에서 안먹음. 해결하기

--- a/market_B/marketB_project_mobile/tab.html
+++ b/market_B/marketB_project_mobile/tab.html
@@ -9,8 +9,7 @@
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/mobile.css">
 
@@ -918,8 +917,6 @@
   </div>
 
 
-
-
 <section id="iconmenu" class="container">
 	<h1 class="hidden">아이콘메뉴</h1>
 <div class="multiple">
@@ -955,7 +952,7 @@
 
 </section>
 
-   <!-- <div id="Mtab-wrapper" class="container">
+ <div id="Mtab-wrapper" class="container">
         <nav>
             <ul class="Mtabs">
                 <li>
@@ -996,7 +993,7 @@
                 </nav>
 
                 <div class="swiper Mnested-content " id="Mnested1">
-                    <div class="swiper-wrapper">
+                    <div class="swiper-wrapper ">
                         <ul class="swiper-slide">
                             <li class="mproduct-item">
                                 <a href="#">
@@ -1096,10 +1093,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content " id="Mnested2">
@@ -1202,10 +1195,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content " id="Mnested3">
@@ -1308,10 +1297,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested4">
@@ -1414,10 +1399,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested5">
@@ -1520,10 +1501,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested6">
@@ -1626,10 +1603,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
             </li>
 
@@ -1758,14 +1731,11 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content " id="Mnested8">
-                    <div class="swiper-wrapper">
+                    <div class="sw
+                    iper-wrapper">
                         <ul class="swiper-slide">
                             <li class="mproduct-item">
                                 <a href="#">
@@ -1864,10 +1834,7 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
+
                 </div>
 
                 <div class="swiper Mnested-content " id="Mnested9">
@@ -1970,10 +1937,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested10">
@@ -2076,10 +2039,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested11">
@@ -2182,10 +2141,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested12">
@@ -2288,10 +2243,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
             </li>
             <li class="Mtabs-content" id="Mtab3">
@@ -2420,10 +2371,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content " id="Mnested14">
@@ -2526,10 +2473,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content " id="Mnested15">
@@ -2632,10 +2575,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested16">
@@ -2738,10 +2677,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested17">
@@ -2844,10 +2779,6 @@
                         </ul>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
-                    </div>
                 </div>
 
                 <div class="swiper Mnested-content" id="Mnested18">
@@ -2949,17 +2880,14 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="pager">
-                        <span class="active"></span>
-                        <span></span>
+                    <div class="swiper-pagination">
                     </div>
                 </div>
             </li>
         </ul>
-    </div> -->
+    </div>
 
-    <div id="Ptab-wrapper" class="container ">
+    <div id="Ptab-wrapper" class="container">
         <nav>
             <ul class="Ptabs">
                 <li>
@@ -4297,7 +4225,129 @@
         </ul>
     </div> 
 
+    <div class="sub-banner container">
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide sub1"><a href=""></a></li>
+          <li class="swiper-slide sub2"><a href=""></a></li> 
+          <li class="swiper-slide sub3"><a href=""></a></li>
+        <div class="swiper-pagination"></div>
+        </ul>
+      </div>
 
+      <section class="youtube-wrapper container">
+        <h2>YOUTUBE</h2>
+        <div class="youtube-content">
+          <div class="youtube-video">
+            <iframe 
+            src="https://www.youtube.com/embed/XGjgXNCF7n0?si=g30Hhnof5KAlEy7T?&autoplay=1&mute=1&loop=1&playlist=XGjgXNCF7n0&controls=0"
+              title="YouTube video player">
+            </iframe>
+          </div>
+  
+          <ul class="youtube-product">
+            <li class="mproduct-item">
+                <a href="#">
+                    <figure>
+                        <div class="item-image">
+                            <img src="image/youtube_product1.png" alt="제품썸네일">
+                            <span class="material-icons like"> favorite_border</span>
+                        </div>
+                        <figcaption>
+                            <span class="delivery">당일발송</span>
+                            <p class="item-name">마켓비 SIMPLIE 시리즈</p>
+                            <p class="price">
+                                <span class="org-price">340,900원</span>
+                                <span>82%</span>
+                                <span>63,000원</span>
+                            </p>
+                            <p class="review">
+                                <span class="material-icons star"> star</span>
+                                <span>4.3(147)</span>
+                            </p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li class="mproduct-item">
+                <a href="#">
+                    <figure>
+                        <div class="item-image">
+                            <img src="image/youtube_product2.png" alt="제품썸네일">
+                            <span class="material-icons like"> favorite_border</span>
+                        </div>
+                        <figcaption>
+                            <span class="delivery">당일발송</span>
+                            <p class="item-name">마켓비 SIMPLIE 5단 수납장 BC023 화이트</p>
+                            <p class="price">
+                                <span class="org-price">960,000원</span>
+                                <span>58%</span>
+                                <span>399,000원</span>
+                            </p>
+                            <p class="review">
+                                <span class="material-icons star"> star</span>
+                                <span class="review">4.2(60)</span>
+                            </p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+           </ul>
+        </div>
+      </section>
+      
+      <section class="magazine-wrapper container">
+        <h2>MAGAZINE B</h2>
+        <div class="swiper-wrapper magazine_content">
+          <ul class="swiper-slide container 1">
+            <li>
+              <img src='image/magazine_1.jpg' alt='홈카페 미니수납장'>
+              <div class="mtext">
+                <h3>감성 홈카페 인테리어</h3>
+                <p>미니미니한 홈카페 수납 인테리어</p>
+              </div>
+            </li>
+            <li>
+              <img src='image/magazine_2.jpg' alt='홈카페 미니수납장'>
+              <div class="mtext">
+                <h3>감성 홈카페 인테리어</h3>
+                <p>미니미니한 홈카페 수납 인테리어</p>
+              </div>
+            </li>
+          </ul>
+          <ul class="swiper-slide container 2">
+            <li>
+              <img src='image/magazine_3.jpg' alt='스틸다 철제침대'>
+              <div class="mtext">
+                <h3>심플한 스틸침대의 모던한 반란</h3>
+                <p>신상 침대라인 ‘스틸다’ 인테리어</p>
+              </div>
+            </li>
+            <li>
+              <img src='image/magazine_4.jpg' alt='템바보드 수납장'>
+              <div class="mtext">
+                <h3>템바도어의 은은한 멋 속으로 풍덩</h3>
+                <p>입체감을 살린 템바보드 인테리어</p>
+              </div>
+            </li>
+          </ul>
+          <ul class="swiper-slide container 3">
+            <li>
+              <img src='image/magazine_5.jpg' alt='공부방 의자'>
+              <div class="mtext">
+                <h3>새학기를 맞이하는 당신에게</h3>
+                <p>모던한 아날로그 감성을 더한 공부방 인테리어</p>
+              </div>
+            </li>
+            <li>
+              <img src='image/magazine_6.jpg' alt='HEN 원목 옷장'>
+              <div class="mtext">
+                <h3>갤러리형 도어 옷장의 내추럴한 감성 </h3>
+                <p>로맨틱하고 고급스러운 HEN옷장 인테리어</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 <script src="js/Mtab.js"></script>
 <script src="js/Ptab.js"></script>
 
