--- a/market_B/marketB_project_mobile/tab.html
+++ b/market_B/marketB_project_mobile/tab.html
@@ -876,82 +876,28 @@
     <header class="mm-header">
         <h2><a href="#">"로그인이 필요합니다"<span class="material-symbols-outlined">navigate_next</span></a></h2>
         <ul class="quick-menu">
-            <li><a href="#"><span class="material-symbols-outlined">
-                person
-                </span>마이페이지</a></li>
-            <li><a href="#"><span class="material-symbols-outlined">
-                local_shipping
-                </span>주문조회</a></li>
-            <li><a href="#"><span class="material-symbols-outlined">
-                favorite
-                </span>찜상품</a></li>
+            <li><a href="#">마이페이지</a></li>
+            <li><a href="#">주문조회</a></li>
+            <li><a href="#">찜상품</a></li>
         </ul>
     </header>
-      <button class="cross">&#735;</button>
-        <div class="mm-body">
-            <div class="nav">
-                <ul class="tab-menu">
-                    <li class="active"><a href="#tabs-1">제품</a></li>
-                    <li><a href="#">기획전</a></li>	
-                </ul>
-            </div>
-        <ul id="tab-content">
-          <li id="tabs-1">
-            <dl class="depth1-wrapper">
-               <dt class="depth1">
-                <a>
-                 <img src="image/circle_menu1.png" alt="">
-                 <span>가구</span>
-                </a>
-                 <span class="material-symbols-outlined">
-                    add
-                  </span>
-               </dt>
-               <dd class="mt-dropdown">
-                <div class="mt-drowpdown-inner">
-                   <ul class="depth2-wrapper">
-                    <li>
-                        <dl>
-                          <dt class="depth2">
-                            <a><span>침대</span></a>
-                            <span class="material-symbols-outlined">
-                                add
-                              </span>
-                          </dt>
-                          <dd class="mt-dropdown">
-                            <div class="mt-drowpdown-inner">
-                               <ul class="depth3-wrapper">
-                                <li><a href="#"><span>추천제품</span></a></li>
-                                <li><a href="#"><span>온열침대</span></a></li>
-                                <li><a href="#"><span>철제침대</span></a></li>
-                                <li><a href="#"><span>원목침대</span></a></li>
-                                <li><a href="#"><span>싱글침대/슈퍼싱글</span></a></li>
-                                <li><a href="#"><span>더블침대</span></a></li>
-                                <li><a href="#"><span>퀸침대</span></a></li>
-                                <li><a href="#"><span>데이베드/소파베드</span></a></li>
-                                <li><a href="#"><span>이층/벙커 침대</span></a></li>
-                                <li><a href="#"><span>유아동 침대</span></a></li>
-                                <li><a href="#"><span>침대 테이블</span></a></li>
-                                <li><a href="#"><span>이케아/기타</span></a></li>
-                               </ul>
-                            </div>
-                          </dd>
-                        </dl>
-                    </li>
-                   </ul>
-                
-                </div>
-               </dd>
-            </dl>
-          </li>
-          <li id="tabs-2">
-            <ul class="depth_1">
-                <li><a href="#">menu1</a></li>
-                <li><a href="#">menu2</a></li>
+    <button class="cross">&#735;</button>
+    <div class="mm-body">
+        <div class="nav">
+            <ul class="tab-menu">
+                <li class="active"><a href="#tabs-1">제품</a></li>
+                <li><a href="#">기획전</a></li>
             </ul>
-          </li>
-        </uldiv>
         </div>
+        <ul id="tab-content">
+            <li id="tabs-1">
+  
+            </li>
+            <li id="tabs-2">
+    
+            </li>
+        </ul>
+    </div>
     </div>
 
    <div class="mainbanner">
@@ -1021,7 +967,7 @@
         <li class="swiper-slide"><a href="#"><img src="image/circle_menu6.png" alt="주방용품 바로가기">
             <span>주방용품</span></a></li>
         <li class="swiper-slide"><a href="#"><img src="image/circle_menu7.png" alt="욕실용품 바로가기">
-            <!-- <span>욕실용품</span></a></li> -->
+            <span>욕실용품</span></a></li>
         <li class="swiper-slide"><a href="#"><img src="image/circle_menu8.png" alt="어린이 바로가기">
             <span>어린이</span></a></li>
         <li class="swiper-slide"><a href="#"><img src="image/circle_menu9.png" alt="뷰티/패션 바로가기">
@@ -1031,8 +977,8 @@
       </ul>
 </div>
 <div class="controls">
-	<span id="prev"><img src="image/icon-button-prev.png"></span>
-	<span id="next"><img src="image/icon-button-next.png"></span>
+	<span class="prev"><img src="image/icon-button-prev.png"></span>
+	<span class="next"><img src="image/icon-button-next.png"></span>
 </div>
 
 </section>
@@ -3018,7 +2964,7 @@
                         <div class="hover_wrapper">
                             <div class="right-wrapper">
                                 <span class="delivery">당일발송</span>
-                                <a><span class="material-icons like"> favorite_border</span></a>
+                                <a><span class="material-icons"> favorite_border</span></a>
                             </div>
                             <div class="product_info">
                                 <p class="item-name">마켓비 PIDOR 캐비넷 4문 수납장</p>
@@ -3040,7 +2986,7 @@
                         <div class="hover_wrapper">
                             <div class="right-wrapper">
                                 <span class="delivery">당일발송</span>
-                                <a><span class="material-icons like"> favorite_border</span></a>
+                                <a><span class="material-icons"> favorite_border</span></a>
                             </div>
                             <div class="product_info">
                                 <p class="item-name">마켓비 BINGEURI 회전서랍 트롤리</p>
@@ -3458,7 +3404,7 @@
                         <div class="hover_wrapper">
                             <div class="right-wrapper">
                                 <span class="delivery">당일발송</span>
-                                <a><span class="material-icons like"> favorite_border</span></a>
+                                <a><span class="material-icons"> favorite_border</span></a>
                             </div>
                             <div class="product_info">
                                 <p class="item-name">마켓비 PIDOR 캐비넷 4문 수납장</p>
@@ -3480,7 +3426,7 @@
                         <div class="hover_wrapper">
                             <div class="right-wrapper">
                                 <span class="delivery">당일발송</span>
-                                <a><span class="material-icons like"> favorite_border</span></a>
+                                <a><span class="material-icons"> favorite_border</span></a>
                             </div>
                             <div class="product_info">
                                 <p class="item-name">마켓비 BINGEURI 회전서랍 트롤리</p>
@@ -3898,7 +3844,7 @@
                         <div class="hover_wrapper">
                             <div class="right-wrapper">
                                 <span class="delivery">당일발송</span>
-                                <a><span class="material-icons like"> favorite_border</span></a>
+                                <a><span class="material-icons"> favorite_border</span></a>
                             </div>
                             <div class="product_info">
                                 <p class="item-name">마켓비 PIDOR 캐비넷 4문 수납장</p>
@@ -3920,7 +3866,7 @@
                         <div class="hover_wrapper">
                             <div class="right-wrapper">
                                 <span class="delivery">당일발송</span>
-                                <a><span class="material-icons like"> favorite_border</span></a>
+                                <a><span class="material-icons"> favorite_border</span></a>
                             </div>
                             <div class="product_info">
                                 <p class="item-name">마켓비 BINGEURI 회전서랍 트롤리</p>
@@ -4370,7 +4316,7 @@
                             </p>
                             <p class="review">
                                 <span class="material-icons star"> star</span>
-                                <span class="review">4.2(60)</span>
+                                <span>4.2(60)</span>
                             </p>
                         </figcaption>
                     </figure>
@@ -4481,7 +4427,7 @@
      </nav>
 
  
-<script src="js/Mtab.js"></script>
+<script src="js/main.js"></script>
 <script src="js/Ptab.js"></script>
 </body>
 
